<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switchSize"
        android:background="#ffd4ede8"
        android:text="@string/size_label"
        android:checked="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/rgSize">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_label"
            android:layout_weight="1"
            android:id="@+id/rbtnSmall" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_label"
            android:layout_weight="1"
            android:id="@+id/rbtnMedium" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_label"
            android:layout_weight="1"
            android:id="@+id/rbtnLarge" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huge_label"
            android:layout_weight="1"
            android:id="@+id/rbtnHuge" />
    </RadioGroup>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_label"
        android:id="@+id/switchColor"
        android:background="#ffd4ede8"
        android:checked="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="1dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/rgColor"
        android:paddingBottom="5dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff000000"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnBlack" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffa2a2a2"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnGray" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnWhite" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff0fa0ff"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnBlue" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff42d0ab"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnTeal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff99e74e"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnGreen" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#d3fff118"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnYellow" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffafc5"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnPink" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff722ea3"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnPurple" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ccdc2a27"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnRed" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffff9247"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnOrange" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#d3492312"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/rbtnBrown" />

    </RadioGroup>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_label"
        android:id="@+id/switchType"
        android:background="#ffd4ede8"
        android:checked="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="1dp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/rgType">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face_label"
            android:layout_weight="1"
            android:id="@+id/rbtnFace" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_label"
            android:layout_weight="1"
            android:id="@+id/rbtnPhoto" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clipart_label"
            android:layout_weight="1"
            android:id="@+id/rbtnClipart" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lineart_label"
            android:layout_weight="1"
            android:id="@+id/rbtnLineart" />
    </RadioGroup>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site_label"
        android:id="@+id/switchSite"
        android:background="#ffd4ede8"
        android:checked="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="1dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:hint="@string/enter_url_hint"
        android:singleLine="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok_label"
        android:id="@+id/btnSettingsOk"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_blue_dark"
        android:background="#fffbfbfb" />
</LinearLayout>